@@ -78,9 +78,6 @@ int send__disconnect(struct mosquitto *mosq, uint8_t reason_code, const mosquitt
 		}
 	}
 
-#if defined(WITH_BROKER) && defined(WITH_SYS_TREE)
-	metrics__int_inc(mosq_counter_mqtt_disconnect_sent, 1);
-#endif
 	return packet__queue(mosq, packet);
 }
 
