@@ -47,6 +47,7 @@ set (MOSQ_SRCS
 	plugin_callbacks.c plugin_v5.c plugin_v4.c plugin_v3.c plugin_v2.c
 	plugin_init.c plugin_cleanup.c plugin_persist.c
 	plugin_acl_check.c plugin_basic_auth.c plugin_connect.c plugin_disconnect.c
+	plugin_client_offline.c
 	plugin_extended_auth.c plugin_message.c plugin_psk_key.c plugin_public.c
 	plugin_subscribe.c
 	plugin_tick.c
