@@ -54,7 +54,5 @@ int send__unsuback(struct mosquitto *mosq, uint16_t mid, int reason_code_count, 
         packet__write_bytes(packet, reason_codes, (uint32_t)reason_code_count);
 	}
 
-	metrics__int_inc(mosq_counter_mqtt_unsuback_sent, 1);
-
 	return packet__queue(mosq, packet);
 }
