@@ -206,6 +206,7 @@ endif
 	./09-plugin-bad.py
 	./09-plugin-change-id.py
 	./09-plugin-delayed-auth.py
+	./09-plugin-evt-client-offline.py
 	./09-plugin-evt-message-in.py
 	./09-plugin-evt-message-out.py
 	./09-plugin-evt-psk-key.py
