@@ -173,6 +173,7 @@ tests = [
     (1, './09-plugin-auth-v5-unpwd-success.py'),
     (1, './09-plugin-bad.py'),
     (1, './09-plugin-change-id.py'),
+    (1, './09-plugin-evt-client-offline.py'),
     (1, './09-plugin-evt-message-in.py'),
     (1, './09-plugin-evt-message-out.py'),
     (1, './09-plugin-evt-psk-key.py'),
